deployments/pathweb/workloads/media-services/bazarr/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bazarr
  namespace: media-services
  labels:
    app.kubernetes.io/name: bazarr
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: bazarr
  serviceName: bazarr-headless
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bazarr
    spec:
      nodeSelector:
        node-group: baldric
      containers:
      - name: bazarr
        image: linuxserver/bazarr:latest
        ports:
        - containerPort: 6767
          name: http
        startupProbe:
          httpGet:
            path: /
            port: 6767
          periodSeconds: 3
          failureThreshold: 20
        livenessProbe:
          httpGet:
            path: /
            port: 6767
          periodSeconds: 60
        volumeMounts:
        - name: config
          mountPath: /config
        - name: empty
          mountPath: /media
        - name: media
          mountPath: /media/Shows
          subPath: Shows
        - name: media
          mountPath: /media/Movies
          subPath: Movies
        resources:
          requests:
            cpu: "50m"
            memory: "250Mi"
          limits:
            cpu: "500m"
            memory: "1Gi"
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: okinawa-media-smb
      - name: empty
        emptyDir: {}
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
